<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="fill_vertical"
    tools:context=".FacturaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtImagenFactura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imagen_factura"
                android:textAlignment="center"
                android:textSize="25dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/imgFactura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/factura" />

            <Button
                android:id="@+id/btnTomarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="220dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/boton_elipse"
                android:backgroundTint="#8BC34A"
                android:onClick="loadImage"
                android:text="@string/tomar_foto" />

            <Button
                android:id="@+id/btnSeleccionarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/boton_elipse"
                android:backgroundTint="#8BC34A"
                android:onClick="selectImage"
                android:text="@string/seleccionar_imagen" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_datos"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/txtNitProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/nit_proveedor"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/valorFactura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/valor"
                android:inputType="number" />

            <Button
                android:id="@+id/btnFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_elipse"
                android:backgroundTint="#009688"
                android:text="@string/fecha" />

            <TextView
                android:id="@+id/txtPickerFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginRight="50dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="-40dp"/>

            <Button
                android:id="@+id/btnRegistrarFactura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp"
                android:onClick="registrarFactura"
                android:background="@drawable/boton_elipse"
                android:text="@string/registrar" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>